# is_bimodal

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml  wheel.yml
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/tests/: test_is_bimodal.py
python_bindings/: pyproject.toml
python_bindings/src/: lib.rs
rust/: Cargo.toml
rust/src/: lib.rs
rust/test/: hist.txt
src/: lib.rs
tests/: test_is_bimodal.py
