[package]
name = "is_bimodal"
version = "0.2.1"
edition = "2021"

[lib]
name = "is_bimodal"
crate-type = [ "cdylib" ]

[dependencies]
tracing = "0.1.40"
pyo3 = { version = "*", features = [ "extension-module", "abi3-py39" ]}
is-bimodal = { path = "../rust" }

[dev-dependencies]
float_eq = "1.0.1"
tracing-test = "0.2.5"
